--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 coverage==6.5.0
 dill==0.3.5.1
+dj-database-url==0.5.0
 Django==3.2.16
 Flask==2.2.2
 Flask-SQLAlchemy==2.5.1
